# testappfolder

client/: dockerfile  index.html  package-lock.json  package.json  vite.config.ts
client/assets/prize/: Hermes_Bag.json
client/src/: index.css
client/src/components/: App.tsx  BottomNavigation.css  BottomNavigation.tsx  Header.css  Header.tsx  LanguageContext.tsx  Page.tsx  StarsContext.tsx
client/src/components/Link/: Link.css
client/src/config/: api.ts
client/src/data/: items.ts
client/src/hooks/: fetchCaseStatus.ts  useCaseStatus.ts  useHistory.ts  useLeaderboard.ts  useModalGiftActions.ts  useProfileDeposit.ts  useSendGift.ts  useSendRareGift.ts  useStars.ts  useUnifiedRoulette.ts  useUserGifts.ts  useUserRank.ts
client/src/navigation/: routes.tsx
client/src/pages/: CasesPage.module.css  CasesPage.tsx  GiftGrid.tsx  HistoryPage.module.css  HistoryPage.tsx  LeaderboardPage.tsx  ProfileModal.tsx  ProfilePage.tsx
client/src/store/: useModalStore.ts
client/store/: useUserStore.js
db/: init.sql
gifter/: Dockerfile  main.py  pyproject.toml
gifter/gifter/: app.py  bot.py
server/: dockerfile  package-lock.json  package.json  server.js
server/bot/: bot.js  sendGift.js
server/routes/: caseStatus.js  chechPlaceLeadear.js  checkGifts.js  checkStars.js  depositProfile.js  depositStars.js  historyActions.js  leaderboard.js  rouletteRoutes.js  sellGift.js  sendRareGift.js  userGiftsRoutes.js  userRoutes.js
server/utils/: rareGiftHelpers.js  sendGiftToPython.js  telegram.js  validateInitData.js
userbot/: Dockerfile  userbot_listener.py
(+69 files in other folders)
